--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,7 +1,7 @@
 body {
   width: 99%;
   height: 900px;
-  background-color: rgb(243, 222, 179);
+  background-color: #fc6;
 }
 
 #top-bar {
@@ -64,5 +64,5 @@ body {
 }
 
 h1 {
-  color: rgb(172, 38, 5);
+  color: #f30;
 }
